# OpenRouter_SSE_Backend

./: .pre-commit-config.yaml  README.md  activate.sh  dev-env.sh  mypy.ini  pyproject.toml  run_server.sh
.github/: copilot-instructions.md
src/app/: __init__.py  config.py  logger.py  main.py  mcp_server.py
src/routers/: __init__.py  chat.py  openrouter_chat.py  openrouter_chat_schemas.py  openrouter_chat_utils.py  openrouter_client.py  openrouter_errors.py  openrouter_models.py  openrouter_schemas.py  openrouter_services.py  openrouter_streaming.py  openrouter_utils.py
src/services/: __init__.py  openrouter_sse_client.py
test_frontend/: index.html  script.js  style.css
tests/: conftest.py  test_chat.py  test_config.py  test_disable_reasoning.py  test_mcp_server.py  test_models.py
